--- a/tine20/Felamimail/translations/pt_BR.po
+++ b/tine20/Felamimail/translations/pt_BR.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Tine 2.0 - Felamimail\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-12-17 15:22-0300\n"
-"Last-Translator: Cassiano Dal Pizzol <cassiano@dalpizzol@serpro.gov.br>\n"
+"PO-Revision-Date: 2012-12-18 11:36-0300\n"
+"Last-Translator: poedit <mail@server.dom>\n"
 "Language-Team: Tine 2.0 Translators <rommel.cysne@serpro.gov.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -1216,8 +1216,8 @@ msgstr "Não foi possível criar a pasta"
 
 #: Backend/Imap.php:
 #: 194
-msgid "perhaps it already exists."
-msgstr "talvez ela já exista."
+msgid "it already exists."
+msgstr "ela já existe."
 
 #: Backend/Cache/Imap/Folder.php:252
 msgid "Shared Folders"
